src/objects/Billing_Report__c.object
<CustomObject>
    <description>Billing Reports coming from Zuora</description>
    <fields>
        <fullName>Accounting_Period__c</fullName>
        <description>Billing accounting period</description>
        <label>Accounting_Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <description>CRSM Billing Account ID/Name</description>
        <inlineHelpText>CRSM Billing Account ID/Name</inlineHelpText>
        <label>Billing Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Report_Seq__c</fullName>
        <description>External Sequence ID coming from Oracle</description>
        <externalId>true</externalId>
        <inlineHelpText>External Sequence ID coming from Oracle</inlineHelpText>
        <label>Billing_Report_Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendar_Period__c</fullName>
        <formula>DATE( VALUE( RIGHT( Accounting_Period__c, 2 )) + 2000, VALUE( LEFT( Accounting_Period__c, 2 )), 1 )</formula>
        <label>Calendar Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copies__c</fullName>
        <description>Total number of copies information for the amount being posted</description>
        <inlineHelpText>Total number of copies information for the amount being posted</inlineHelpText>
        <label>Copies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GST_Amount__c</fullName>
        <description>GST Amount</description>
        <inlineHelpText>GST Amount</inlineHelpText>
        <label>GST_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Pub_Indicator__c</fullName>
        <description>Online Pub Indicator</description>
        <inlineHelpText>Online Pub Indicator</inlineHelpText>
        <label>Online_Pub_Indicator</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Scope_GST__c</fullName>
        <description>Amount for subsidiaries that are part of the GST Registration group as SPHL</description>
        <inlineHelpText>Amount for subsidiaries that are part of the GST Registration group as SPHL</inlineHelpText>
        <label>Out of Scope GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Platform__c</fullName>
        <description>Product Platform from Zuora</description>
        <inlineHelpText>Product Platform from Zuora</inlineHelpText>
        <label>Product_Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <description>Type of Publication – Newspaper/Magazine</description>
        <inlineHelpText>Type of Publication – Newspaper/Magazine</inlineHelpText>
        <label>Publication Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <description>Publication Code to which the amount is associated</description>
        <inlineHelpText>Publication Code to which the amount is associated</inlineHelpText>
        <label>Publication</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <description>Publisher Name/Group – SPH, SPH Mag</description>
        <inlineHelpText>Publisher Name/Group – SPH, SPH Mag</inlineHelpText>
        <label>Publisher</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Contact_ID__c</fullName>
        <description>Recipient Contact ID/Name</description>
        <inlineHelpText>Recipient Contact ID/Name</inlineHelpText>
        <label>Recipient Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Rated_GST__c</fullName>
        <description>Standard 7% GST rated subscription amounts</description>
        <inlineHelpText>Standard 7% GST rated subscription amounts</inlineHelpText>
        <label>Standard Rated GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscriber_Account__c</fullName>
        <description>CRSM Subscriber Account ID/Name</description>
        <inlineHelpText>CRSM Subscriber Account ID/Name</inlineHelpText>
        <label>Subscriber Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_AMT_After_GST__c</fullName>
        <description>Total subscription amount after GST</description>
        <inlineHelpText>Total subscription amount after GST</inlineHelpText>
        <label>Total Subscription Amount After GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_AMT_Before_GST__c</fullName>
        <description>Total subscription amount before GST</description>
        <inlineHelpText>Total subscription amount before GST</inlineHelpText>
        <label>Total Subscription Amount Before GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <description>End Date of the susbcription</description>
        <inlineHelpText>End Date of the susbcription</inlineHelpText>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_ID__c</fullName>
        <description>Subscription ID</description>
        <inlineHelpText>Subscription ID</inlineHelpText>
        <label>Subscription_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <description>The TRAN TYPE breakdown is according to Report ID: SSP5AE6/1</description>
        <inlineHelpText>The TRAN TYPE breakdown is according to Report ID: SSP5AE6/1</inlineHelpText>
        <label>Transaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zero_Rated_GST__c</fullName>
        <description>Amounts for overseas subscribers</description>
        <inlineHelpText>Amounts for overseas subscribers</inlineHelpText>
        <label>Zero Rated GST</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Billing Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detailed_Billing_Reports</fullName>
        <columns>Transaction_Type__c</columns>
        <columns>Subscriber_Account__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Recipient_Contact_ID__c</columns>
        <columns>Subscription_ID__c</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Type__c</columns>
        <columns>Publisher__c</columns>
        <columns>Copies__c</columns>
        <columns>Zero_Rated_GST__c</columns>
        <columns>Out_of_Scope_GST__c</columns>
        <columns>Standard_Rated_GST__c</columns>
        <columns>Subscription_AMT_Before_GST__c</columns>
        <columns>Subscription_AMT_After_GST__c</columns>
        <columns>Subscription_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed Billing Reports</label>
    </listViews>
    <nameField>
        <label>Billing Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>